syntax = "proto3";

package user_v1;


import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";


option go_package = "github.com/Sysleec/auth/grpc/pkg/user_v1;user_v1";

option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "User API"
    version: "1.0.0"
    contact: {
      name: "Sysleec"
      email: "sysleec@gmail.com"
    };
  };

  host: "45.8.97.234:8081",
  schemes: HTTP,
  schemes: HTTPS,
  consumes: "application/json",
  produces: "application/json",
};

service UserV1 {
  // Create a new user
  rpc Create(CreateRequest) returns (CreateResponse){
    option (google.api.http) = {
      post: "/user/v1/create"
      body: "*"
    };
  }
  // Get a user
  rpc Get(GetRequest) returns (GetResponse){
    option (google.api.http) = {
      get: "/user/v1"
    };
  }
  // Update a user
  rpc Update(UpdateRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      patch: "/user/v1"
      body: "*"
    };
  }
  // Delete a user
  rpc Delete(DeleteRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/user/v1"
    };
  }
}

enum Role {
  user = 0;
  admin = 1;
}

message CreateRequest {
  // User name   
  string name = 1 [(validate.rules).string = {min_len: 3, max_len: 12}, (validate.rules).string.pattern = "^[a-zA-Z0-9_]+$"];
  // User email
  string email = 2 [(validate.rules).string.email = true];
  // User password
  string password = 3 [(validate.rules).string.min_len = 6];
  // User password confirmation
  string password_confirm = 4 [(validate.rules).string.min_len = 6];
  // User role
  Role role = 5;
}

message CreateResponse {
  int64 id = 1;
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  int64 id = 1;
  string name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message UpdateRequest {
  int64 id = 1;
  google.protobuf.StringValue name = 2;
  google.protobuf.StringValue email = 3;
}

message DeleteRequest {
  int64 id = 1;
}

